--- a/Email_Classifier_with_ML_Notebook_1.ipynb
+++ b/Email_Classifier_with_ML_Notebook_1.ipynb
@@ -3,7 +3,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Automate Your Workflow: Email Classification with Machine Learning\n",
+        "# Automate Your Workflow: Email Classification with Machine Learning - Notebook 1\n",
         "This research notebook documents an in-depth analysis of a large email dataset. It provides a detailed overview of the steps taken to preprocess the data, model topics, and visualize the results.\n",
         "\n",
         "Key Analysis Steps:\n",
