--- a/Email_Classifier_with_ML_Notebook_2.ipynb
+++ b/Email_Classifier_with_ML_Notebook_2.ipynb
@@ -5679,21 +5679,23 @@
    "source": [
     "models = [\"Logistic Regression\", \"RandomForestClassifier\", \"Support Vector Machine\", \"K-Neighbors Classifier\", \"Gaussian Naive Bayes\", \"Gradient Boosting Classifier\"]\n",
     "\n",
-    "# Utwórz pusty dataframe\n",
+    "# Create an empty dataframe\n",
+    "\n",
     "df_cm_data = pd.DataFrame(columns=[\"model\", \"Prawidłowe pozytywne\", \"Prawidłowe negatywne\", \"Fałszywe pozytywne\", \"Fałszywe negatywne\"])\n",
     "\n",
-    "# Przeiteruj modele\n",
-    "for model_name in models:\n",
-    "  # Wyodrębnij dane cm_data dla danego modelu\n",
+    "# Iterate the models\n",
+    "for model_name in models:  \n",
+    "    \n",
+    "  # Extract cm_data for a given model\n",
     "  cm_data = df[df['model'] == model_name]['cm_data'].tolist()[0]\n",
     "\n",
-    "  # Przekształć cm_data z listy na tablicę\n",
+    "  # Wyodrębnij cm_data dla danego modelu\n",
     "  cm_data_array = np.array(cm_data).reshape(2, 2)\n",
     "\n",
-    "  # Rozpakuj wartości z tablicy\n",
+    "  # Unpack values ​​from array\n",
     "  tp, fp, fn, tn = cm_data_array.ravel()\n",
     "\n",
-    "  # Utwórz tymczasowy DataFrame\n",
+    "  # Create a temporary DataFrame\n",
     "  temp_df = pd.DataFrame({\n",
     "      \"model\": [model_name],\n",
     "      \"Prawidłowe pozytywne\": [tp],\n",
@@ -5702,10 +5704,11 @@
     "      \"Fałszywe negatywne\": [fn]\n",
     "  })\n",
     "\n",
-    "  # Dodaj wiersz do df_cm_data\n",
+    "  # Add a line to df_cm_data\n",
     "  df_cm_data = pd.concat([df_cm_data, temp_df], ignore_index=True)\n",
     "\n",
-    "# Wyświetl df_cm_data\n",
+    "# Display df_cm_data\n",
+    "\n",
     "print(df_cm_data.to_string())\n"
    ]
   },
