--- a/Email_Classifier_with_ML_Notebook_1.ipynb
+++ b/Email_Classifier_with_ML_Notebook_1.ipynb
@@ -351,7 +351,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# # Check data\n",
+        "# Check data\n",
         "df_sample.head(1)"
       ],
       "metadata": {
